--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -47,28 +47,24 @@ classes that you can use:
 <nav class="cover-navigation navigation--social">
   <ul class="navigation">
 
-
-  <!-- Twitter -->
-  <li class="navigation__item">
-    <a href="http://twitter.com/daleanthony" title="@DaleAnthony on Twitter">
-      <i class='icon icon-social-twitter'></i>
-      <span class="label">Twitter</span>
-    </a>
-  </li>
-
-    <!-- Dribbble -->
     <li class="navigation__item">
-      <a href="http://dribbble.com/daleanthony" title="Dale-Anthony on Dribbble">
-        <i class='icon icon-social-dribbble'></i>
-        <span class="label">Dribbble</span>
+      <a href="http://twitter.com/tylergarlick" title="@TylerGarlick on Twitter" target="_blank">
+        <i class='icon icon-social-twitter'></i>
+        <span class="label">Twitter</span>
       </a>
     </li>
 
-    <!-- Email -->
     <li class="navigation__item">
-      <a href="mailto:hello@daleanthony.com" title="Email hello@daleanthony.com">
-        <i class='icon icon-mail'></i>
-        <span class="label">Email</span>
+      <a href="https://plus.google.com/+TylerGarlick" title="Tyler Garlick on Google+" target="_blank">
+        <i class='icon icon-social-google-plus'></i>
+        <span class="label">Google+</span>
+      </a>
+    </li>
+
+    <li class="navigation__item">
+      <a href="https://github.com/TylerGarlick" title="Tyler Garlick on GitHub" target="_blank">
+        <i class='icon icon-social-github'></i>
+        <span class="label">GitHub</span>
       </a>
     </li>
 
